2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/item-bar.c (item_bar_resize_stop) : renamed from
	  item_bar_end_resize to be consistent.

	* src/Makefile.am : rename gnumeric-sheet -> gnumeric-canvas

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	* src/sheet-control.c (sc_wbc) : new.
	(sc_sheet) : const.
	(sc_update_cursor_pos) : delete.

	* src/gnumeric-pane.c (gnm_pane_special_cursor_bound_set) : new.
	(gnm_pane_special_cursor_start) : ditto.
	(gnm_pane_special_cursor_start) : ditto.

	* src/sheet-control-gui.c (scg_update_cursor_pos)  : fold into
	  scg_resize.
	(scg_resize) : reposition all of the cursors.
	(scg_edit_start) renamed from scg_create_editor.
	(scg_edit_stop) : renamed from scg_stop_editing.
	(scg_special_cursor_start) : new.
	(scg_special_cursor_stop) : new.
	(scg_special_cursor_bound_set) : new.

	* src/item-cursor.c (item_cursor_selection_event) : Use
	  scg_special_cursor_start, and scg_special_cursor_bound_set.
	(item_cursor_do_action) : use scg_special_cursor_stop.
	(item_cursor_do_drop) : ditto.
	(item_cursor_autofill_event) : ditto.
	(item_cursor_set_bounds_visibly) : Doh! fix my stupidity.
	  We need to change the visibility here because we explicitly disable
	  doing it in the scroll handlers.  We are constraining the scroll
	  so we need to do it manually.

2001-07-30  Jody Goldberg <jgoldberg@home.com>

	s/GnumericSheet/GnumericCanvas/
	s/gsheet/gcanvas/
	s/gnumeric_sheet_*/gnm_canvas_/
	s/gnumeric_pane_*/gnm_pane_/
	Move the std and rangesel cursors from GnumericSheet -> GnumericPane
	Move the grid and editor from GnumericSheet -> GnumericPane

2001-07-28  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-sheet.c (gnumeric_sheet_handle_motion) : fix autoscroll
	  from bottom/right panes into adjcant regions that do not scroll as
	  reported by almer.

2001-07-28  Jody Goldberg <jgoldberg@home.com>

	* src/gnumeric-sheet.c (gnumeric_sheet_handle_motion) : work towards